[metadata]
name = geo
author = Johannes Hansen
author-email = johannes.hansen@ed.ac.uk
summary = A Python library for n-dimensional Earth observation data processing
long_description = file: README.md
long_description_content_type = text/markdown
keywords = earth observation, satellite data, datacube, remote sensing, geospatial, raster
license = MIT
home-page = https://github.com/jnhansen/geo
classifier =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
    pytest-runner
    cython
    cythongsl
    numpy
tests_require =
    pytest
    # pytest-cov
    netCDF4

[aliases]
test = pytest

[tool:pytest]
addopts =
    --verbose
    --duration=10
